--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   intl: ^0.19.0
   url_launcher: ^6.2.6
   file_picker: ^6.1.1
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
