--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -30,16 +30,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.20.2
   cupertino_icons: ^1.0.8
-  font_awesome_flutter: ^10.7.0
-  image_picker: ^1.0.7
-  intl: ^0.19.0
-  url_launcher: ^6.2.6
-  file_picker: ^6.1.1
-  provider: ^6.1.5
-  dio: ^5.8.0+1
+  font_awesome_flutter: ^10.10.0
+  image_picker: ^1.2.0
+  url_launcher: ^6.3.2
+  file_picker: ^10.3.3
+  provider: ^6.1.5+1
+  dio: ^5.9.0
+  fl_chart: ^1.1.1
   shared_preferences: ^2.5.3
-  go_router: ^15.2.4
+  go_router: ^16.2.2
   jwt_decoder: ^2.0.1
   
   
@@ -54,7 +57,7 @@ dev_dependencies:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -66,6 +69,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
