--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   provider: ^6.1.5+1
   dio: ^5.9.0
   fl_chart: ^1.1.1
+  pdf: ^3.10.1
+  printing: ^5.9.0
+  path_provider: ^2.0.0
+  open_file: ^3.2.1
   shared_preferences: ^2.5.3
   go_router: ^16.2.2
   jwt_decoder: ^2.0.1
