--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -48,9 +48,9 @@ dependencies:
   shared_preferences: ^2.5.3
   go_router: ^16.2.2
   jwt_decoder: ^2.0.1
+  archive: ^3.4.0
+  excel: ^2.0.0
   country_code_picker: ^3.0.0
-  
-  
   sizer: any
 
 
